# Simple-engine

./: .gitignore  .gitmodules  BUILD_WINDOWS.md  CMakeLists.txt  README.md  START_MSVC-2019.bat  START_MSVC-2022.bat
src/: CMakeLists.txt
src/CoreAbstracts/: CMakeLists.txt  Game.cpp  Game.h  GraphicsProcessor.h  InputProcessor.h  PhysicsProcessor.h  Scene.cpp  Scene.h
src/EC/: CMakeLists.txt  Component.h  Input.h  Transform.cpp  Transform.h
src/EC/Components/: BoxCollider.h  Camera.h  MeshCollider.h  MeshRenderer.h  SphereCollider.h
src/ECS/: CMakeLists.txt  Component.h  GameObject.cpp  GameObject.h  ITransformListener.h  Transform.cpp  Transform.h
src/ECS/Components/: Animator.h  BoxCollider.h  Camera.h  Collider.h  Light.h  MeshCollider.h  MeshRenderer.h  Rigidbody.h  SphereCollider.h
src/Navigation/: CMakeLists.txt  NavMesh.cpp  NavMesh.h  NavMeshGenerator.h  Struct_utilities.cpp  polypartition.h
src/OgreRendering/: CMakeLists.txt  OgreApp.cpp  OgreApp.h  OgreGraphicsProcessor.cpp  OgreGraphicsProcessor.h  OgreSdlGraphicsProcessor.cpp  OgreSdlGraphicsProcessor.h  OgreTransformImpl.cpp  OgreTransformImpl.h  main.cpp
src/OgreRendering/Components/: Animator.cpp  Animator.h  Camera.h  DirectionalLight.h  Light.h  MeshRenderer.h  PointLight.h  SpotLight.h
src/OgreRendering/OgreImpls/: OgreAnimationClip.cpp  OgreAnimationClip.h  OgreCamera.h  OgreLight.h  OgreMeshRenderer.h
src/ReactPhysicsLinker/: CMakeLists.txt  PhysicsTransformListener.cpp  PhysicsTransformListener.h  ReactPhysicsProcessor.cpp  ReactPhysicsProcessor.h
src/ReactPhysicsLinker/Components/: BoxCollider.h  CapsuleCollider.h  Collider.h  MeshCollider.h  Rigidbody.cpp  Rigidbody.h  SphereCollider.h
src/ReactPhysicsLinker/ReactImpls/: ReactBoxShape.h  ReactCollider.h  ReactRigidbody.cpp  ReactRigidbody.h  ReactSphereShape.h
src/Utilities/: Action.h  BasicTransitions.h  CMakeLists.txt  Observer.h  StateMachine.cpp  StateMachine.h
